--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@trpc/client": "11.0.0-rc.730",
     "@trpc/react-query": "11.0.0-rc.730",
     "@trpc/server": "11.0.0-rc.730",
+    "@upstash/ratelimit": "2.0.5",
+    "@upstash/redis": "1.34.3",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -31,8 +33,10 @@
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "5.0.0",
     "server-only": "^0.0.1",
     "shadcn": "^2.4.0-canary.9",
+    "superjson": "^2.2.2",
     "svix": "1.45.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
