--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "5.0.0",
     "server-only": "^0.0.1",
     "shadcn": "^2.4.0-canary.9",
+    "sonner": "^2.0.1",
     "superjson": "^2.2.2",
     "svix": "1.45.1",
     "tailwind-merge": "^3.0.2",
