--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "concurrently": "9.1.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "embla-carousel-react": "^8.5.2",
@@ -37,6 +38,7 @@
     "next": "15.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-error-boundary": "5.0.0",
     "server-only": "^0.0.1",
